--- a/src/root.css
+++ b/src/root.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  h1 {
+    @apply text-2xl;
+  }
+
+  h2 {
+    @apply text-xl;
+  }
+
+  h3 {
+    @apply text-lg font-bold mt-4;
+  }
+
+  pre {
+    @apply bg-gray-100 p-4;
+  }
+  main {
+    @apply max-w-3xl mx-auto px-4;
+  }
+}
